Added getAllSightings function in service class